; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/broadcom/brcm80211/brcmfmac/extr_p2p.c_brcmf_p2p_find_listen_channel.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/broadcom/brcm80211/brcmfmac/extr_p2p.c_brcmf_p2p_find_listen_channel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IEEE80211_P2P_ATTR_LISTEN_CHANNEL = common dso_local global i32 0, align 4
@SOCIAL_CHAN_1 = common dso_local global i64 0, align 8
@SOCIAL_CHAN_2 = common dso_local global i64 0, align 8
@SOCIAL_CHAN_3 = common dso_local global i64 0, align 8
@INFO = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [28 x i8] c"Found my Listen Channel %d\0A\00", align 1
@EPERM = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64*, i32)* @brcmf_p2p_find_listen_channel to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @brcmf_p2p_find_listen_channel(i64* %0, i32 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64*, align 8
  %5 = alloca i32, align 4
  %6 = alloca [5 x i64], align 16
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store i64* %0, i64** %4, align 8
  store i32 %1, i32* %5, align 4
  %9 = load i64*, i64** %4, align 8
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* @IEEE80211_P2P_ATTR_LISTEN_CHANNEL, align 4
  %12 = getelementptr inbounds [5 x i64], [5 x i64]* %6, i64 0, i64 0
  %13 = call i64 @cfg80211_get_p2p_attr(i64* %9, i32 %10, i32 %11, i64* %12, i32 40)
  store i64 %13, i64* %8, align 8
  %14 = load i64, i64* %8, align 8
  %15 = icmp slt i64 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %2
  %17 = load i64, i64* %8, align 8
  store i64 %17, i64* %3, align 8
  br label %40

18:                                               ; preds = %2
  %19 = getelementptr inbounds [5 x i64], [5 x i64]* %6, i64 0, i64 4
  %20 = load i64, i64* %19, align 16
  store i64 %20, i64* %7, align 8
  %21 = load i64, i64* %7, align 8
  %22 = load i64, i64* @SOCIAL_CHAN_1, align 8
  %23 = icmp eq i64 %21, %22
  br i1 %23, label %32, label %24

24:                                               ; preds = %18
  %25 = load i64, i64* %7, align 8
  %26 = load i64, i64* @SOCIAL_CHAN_2, align 8
  %27 = icmp eq i64 %25, %26
  br i1 %27, label %32, label %28

28:                                               ; preds = %24
  %29 = load i64, i64* %7, align 8
  %30 = load i64, i64* @SOCIAL_CHAN_3, align 8
  %31 = icmp eq i64 %29, %30
  br i1 %31, label %32, label %37

32:                                               ; preds = %28, %24, %18
  %33 = load i32, i32* @INFO, align 4
  %34 = load i64, i64* %7, align 8
  %35 = call i32 @brcmf_dbg(i32 %33, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0), i64 %34)
  %36 = load i64, i64* %7, align 8
  store i64 %36, i64* %3, align 8
  br label %40

37:                                               ; preds = %28
  %38 = load i64, i64* @EPERM, align 8
  %39 = sub nsw i64 0, %38
  store i64 %39, i64* %3, align 8
  br label %40

40:                                               ; preds = %37, %32, %16
  %41 = load i64, i64* %3, align 8
  ret i64 %41
}

declare dso_local i64 @cfg80211_get_p2p_attr(i64*, i32, i32, i64*, i32) #1

declare dso_local i32 @brcmf_dbg(i32, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
